fix: center logo on safari devices (#169)

--- a/src/app/login/_login.scss
+++ b/src/app/login/_login.scss
@@ -21,6 +21,7 @@
 
 .gravitee-login-header {
   padding-bottom: 30px;
+  text-align: center;
 
   & a {
     margin: 10px auto;
